# linblock

./: .gitignore  README.md  pyproject.toml  s001_linblock_folder_structure.sh  s002_create_readme.sh  s003_create_gitignore.sh  s004_create_agents_readme.sh  s005_create_agent_01.sh  s006_create_agent_02.sh  s007_create_agent_03.sh  s008_create_agent_04.sh  s009_create_agent_05.sh  s010_create_agent_06.sh  s011_create_agent_07.sh  s012_create_agent_08.sh  s013_create_agent_09.sh  s014_create_agent_10.sh  s015_create_architecture_doc.sh  s016_run_all_create_scripts.sh  s016_run_all_create_scripts_a.sh  s016_run_all_create_scripts_b.sh  s017_create_modular_architecture_doc.sh  s018_create_module_template_doc.sh  s018_create_module_template_doc_a.sh  s019_create_module_generator.sh  s020_create_build_process_doc.sh  s021_create_phase1_emulator_doc.sh  s022_create_phase2_android_os_doc.sh
.github/workflows/: ci.yml
agents/: README.md
agents/configs/: agent_01_technical_program_manager.md  agent_02_android_platform_architect.md  agent_03_virtualization_engineer.md  agent_04_linux_systems_engineer.md  agent_05_security_hardening_specialist.md  agent_06_gtk_python_developer.md  agent_07_android_build_engineer.md  agent_08_app_management_developer.md  agent_09_qa_test_automation_lead.md  agent_10_devops_engineer.md
android/base/: android14_baseline.md  minimal_services.md  partition_layout.md
docs/agents/: agent_011_qemu_android_expert.md
docs/analysis/: android_emulator_fork_analysis.md
docs/architecture/: overview.md
src/: __init__.py  main.py
tests/: conftest.py
(+263 files in other folders)
